# Jade-Cocoon-Randomizer

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
dep/Jade-Cocoon-Unpacker-Repacker/: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
dep/Jade-Cocoon-Unpacker-Repacker/dep/fmt/include/fmt/: format.h
dep/Jade-Cocoon-Unpacker-Repacker/src/: JCExe.cpp  JCExe.hpp  JCTools.cpp  JCTools.hpp  Main.cpp
dep/mkpsxiso/: .gitignore  CMakeLists.txt  README.md
dep/mkpsxiso/examples/: example.xml
dep/mkpsxiso/src/dumpsxiso/: dumpsxiso.cpp  dumpsxiso.h
dep/mkpsxiso/src/mkpsxiso/: cdwriter.cpp  cdwriter.h  edcecc.cpp  edcecc.h  global.h  iso.cpp  iso.h  main.cpp  mkpsxiso.cpp  mkpsxiso.h
dep/mkpsxiso/src/shared/: cd.h  platform.cpp
src/Backend/: Addons.cpp  Addons.hpp  Behavior.hpp  Boss.cpp  Boss.hpp  CustomCode.cpp  CustomCode.hpp  Entity.hpp  Equipment.cpp  Equipment.hpp  File.cpp  File.hpp  Fixes.cpp  Fixes.hpp  Forest.cpp  Forest.hpp  Game.cpp  Game.hpp  GameTree.cpp  GameTree.hpp  Iso.cpp  Iso.hpp  Item.cpp  Item.hpp  JCUtil.cpp  JCUtil.hpp  JCUtility.cpp  JCUtility.hpp  Levant.cpp  Levant.hpp  Merge.cpp  Merge.hpp  Minion.cpp  Minion.hpp  Mips.hpp  MipsFn.hpp  MipsFunctionTypes.hpp  Misc.cpp  Misc.hpp  Model.cpp  (+34 more)
src/Backend/Randomizer/: Addons.cpp  Boss.cpp  Challenge.cpp  Default.cpp  Equipment.cpp  Fixes.cpp  Forest.cpp  Helpers.cpp  Helpers.hpp  Levant.cpp  Minion.cpp  Misc.cpp  Shop.cpp  Treasure.cpp
src/Common/: Buffer.hpp  FileSystem.cpp  FileSystem.hpp  JcrException.hpp  Json.cpp  Json.hpp  Random.cpp  Random.hpp  RawFile.cpp  RawFile.hpp  RawFileBase.hpp  RawFileReadOnly.cpp  RawFileReadOnly.hpp  RawTypeBrowser.cpp  RawTypeBrowser.hpp  RawTypeNavigator.cpp  RawTypeNavigator.hpp  Singleton.hpp  Software.hpp  TemplateTypes.hpp
src/FrontendQt/: AboutDialog.cpp  AboutDialog.hpp  AboutDialog.ui  AddonsWidget.cpp  AddonsWidget.hpp  AddonsWidget.ui  BossWidget.cpp  BossWidget.hpp  BossWidget.ui  ChallengeWidget.cpp  ChallengeWidget.hpp  ChallengeWidget.ui  DefaultDialog.cpp  DefaultDialog.hpp  DefaultDialog.ui  EquipmentWidget.cpp  EquipmentWidget.hpp  EquipmentWidget.ui  ExtractGameDialog.cpp  ExtractGameDialog.hpp  ExtractGameDialog.ui  FixesWidget.cpp  FixesWidget.hpp  FixesWidget.ui  ForestWidget.cpp  ForestWidget.hpp  ForestWidget.ui  GuiPath.hpp  GuiSettings.cpp  GuiSettings.hpp  HelpConsoleWidget.cpp  HelpConsoleWidget.hpp  HelpConsoleWidget.ui  ImageAnimator.cpp  ImageAnimator.hpp  ImageAnimatorFactory.cpp  ImageAnimatorFactory.hpp  LevantWidget.cpp  LevantWidget.hpp  LevantWidget.ui  (+42 more)
src/FrontendQt/Resource/: JCRandomizer.rc  resources.qrc
src/FrontendQt/resources/: JCRandomizer.rc  resources.qrc
src/FrontendQt/resources/icons/Black/: index.theme
src/FrontendQt/resources/icons/White/: index.theme
